--- a/creadores.html
+++ b/creadores.html
@@ -78,10 +78,10 @@
                 <div class="name">
                     Kevenn Andruss Calderon
                 </div>
-                <P>Repartidor</P>
+                <P>Programador</P>
             </div>
             <div class="bottom-text">
-                <div class="text">Keveen Andruss Calderon actualmente estudia en el colegio Rafael Bernal Jimenez, aspira a ser Repartidor de Rappi Profesional, <br> Correo De Contacto:<br>"nacional0501@gmail.com"</div>
+                <div class="text">Keveen Andruss Calderon actualmente estudia en el colegio Rafael Bernal Jimenez, aspira a ser Programador Profesional, <br> Correo De Contacto:<br>"nacional0501@gmail.com"</div>
             </div>
     </div>
 
