--- a/creadores.html
+++ b/creadores.html
@@ -94,10 +94,10 @@
         <div class="name">
             Dilan Fabian Urquijo
         </div>
-        <P>Programador</P>
+        <P>Diseñador</P>
     </div>
     <div class="bottom-text">
-        <div class="text">Dilan Fabian Urquijo actualmente estudia en el colegio Rafael Bernal Jimenez, aspira a ser Ingeniero Informatico Profesional, <br> Correo De Contacto:<br>"nacional0501@gmail.com"</div>
+        <div class="text">Dilan Fabian Urquijo actualmente estudia en el colegio Rafael Bernal Jimenez, aspira a ser Diseñador Grafico Profesional, <br> Correo De Contacto:<br>"nacional0501@gmail.com"</div>
     </div>
 </div>
 
