--- a/contactenos.html
+++ b/contactenos.html
@@ -13,7 +13,7 @@
     <title>Contactenos</title>
 </head>
 <body>
-    <form action="correo.php" method="POST">
+    <form action="enviar.php" method="POST">
     <div class="container">
         <h2>Contactenos</h2>
         <div class="row100">
