--- a/contactenos.html
+++ b/contactenos.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col">
                 <div class="inputBox">
-                    <input type="text" name="Apellido">
+                    <input type="text" name="Apellido" required="requiered">
                     <span class="text">Apellido/Last Name</span>
                     <span class="line"></span>
                 </div>
