--- a/descargas.html
+++ b/descargas.html
@@ -16,9 +16,9 @@
 
     <div id="container"> 
         <div class="content">
-            <h2>Descargalo Aqui:</h2>
+            <h2>Descarga:</h2>
             <p>Recuerda Que El Asistente Esta En Fase BETA.</p>
-            <a href="Asistente.rar">DESCARGAR</a>
+            <a href="http://www.mediafire.com/file/8gdrcm9hdlbfgwa/asistente.rar/file">DESCARGAR</a>
         </div>
     </div>
 
